# fast-down-py

./: Cargo.toml  LICENSE  README.md
example/: base.py
python/fastdown/: fastdown.pyi
src/: cancel.rs  url_info.rs
