[package]
name = "fast-down-py"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastdown"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
bytes = "1.11.1"
fast-down-ffi = { version = "0.2.4", features = ["file", "mem", "reqwest-tls"] }
parking_lot = "0.12.5"
sanitize-filename = "0.6.0"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
